# csv-converter

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: format_detection.rs  lib.rs  main.rs  value_conversion.rs
src/parsers/: csv.rs  mod.rs  xlsx.rs
tests/: format_detection_tests.rs  integration_tests.rs
