[package]
name = "csv-converter"
version = "0.1.0"
edition = "2021"
authors = ["csv-converter contributors"]
description = "Fast CSV to NDJSON converter with automatic format detection, streaming processing, and smart type inference"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/csv-converter"
homepage = "https://github.com/YOUR_USERNAME/csv-converter"
documentation = "https://github.com/YOUR_USERNAME/csv-converter#readme"
readme = "README.md"
keywords = ["csv", "json", "ndjson", "converter", "cli"]
categories = ["command-line-utilities", "encoding", "parser-implementations"]

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
